--- a/src/components/product/ProductList.css
+++ b/src/components/product/ProductList.css
@@ -10,3 +10,22 @@
   padding: 20px 100px;
   justify-content: center;
 }
+.product-counter{
+  width: 122px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 5px;
+}
+.product-counter button{
+  width: 25px;
+  padding: 3px 0;
+  background-color: black;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.product-counter button:hover{
+  background-color: orange;
+  color: black;
+}
