--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,5 +1,6 @@
 .navbar{
   display: flex;
+  position: relative;
   height: 100px;
   align-items: center;
   padding: 0 50px;
@@ -31,4 +32,20 @@
 }
 .nav-link:hover{
   color: orange;
+}
+.navbar span{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e63946;
+  color:#fff;
+  font-size: 10px;
+  width:25px ;
+  height: 25px;
+  font-weight: bold;
+  border-radius: 50%;
+  top:25px;
+  right:75px;
+
 }
