--- a/src/components/cart/CartList.css
+++ b/src/components/cart/CartList.css
@@ -1,6 +1,7 @@
 .cart-container{
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .cart-list{
   display: flex;
@@ -23,7 +24,7 @@
   width: 20px;
 }
 .name{
-  width: 180px;
+  width: 160px;
   text-align: center;
 }
 .img{
@@ -41,25 +42,59 @@
 .rmv-btn{
   width: 70px;
 }
-.cart-backbtn{
-  display: block;
-  text-align: center;
+.btn-price-div{
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  height: 60px;
 }
-.cart-backbtn button{
+.cart-backbtn{
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
   width: 7rem;
-  padding: 7px 5px;
-  margin:20px 0 30px 0;
+  padding: 5px 5px;
+  left:130px;
   border: 1px solid black;
   background-color: #fff;
   color: black;
   cursor: pointer;
+  text-decoration: none;
   transition: .1s ease-in-out;
 }
-.cart-backbtn button:hover{
+.btn-price-div p{
+  position: absolute;
+  right: 50%;
+  margin-right: -108.26px;
+}
+.cart-backbtn:hover{
   background-color: black;
   color: #fff;
   border: 1px solid #fff;
 }
-p{
-  text-align: center;
+.total-price{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  align-items: center;
+  width: 22%;
+  background-color: black;
+  color:#fff;
+  right:172px;
+  padding: 15px 15px;
+  gap:30px;
+}
+.total-price button{
+  width: 100px;
+  padding: 5px 10px;
+  background-color: orange;
+  border: none;
+  cursor: pointer;
+  transition: .2s ease-in-out;
+}
+.total-price button:hover{
+  background-color: #a7c957;
 }
